# poc-ros-zenoh

./: Cargo.toml  bridge-config.json5  config.json5  receiver.py  requirements.txt
client/: Cargo.toml  build.rs
client-ros/: Cargo.toml  bridge_config.json5  build.rs
client-ros/assets/: package.xml
client-ros/src/: main.rs  messages.rs
client/src/: main.rs
client/src/app/proto/: schema_capnp.rs
client/src/rpc/: schema_capnp.rs
docker/: builder-ros.Dockerfile  docker-compose.yml  entrypoint-dev.sh  ros-turtlesim.Dockerfile  ros-zenoh.Dockerfile
proto/: schema.capnp
router/: Cargo.toml  build.rs
router/src/: main.rs
router/src/app/proto/: schema_capnp.rs
router/src/rpc/: schema_capnp.rs
