[package]
name = "client-ros"
version = "0.1.0"
edition = "2024"

[dependencies]
roslibrust = { version = "0.14.0", features = ["zenoh", "codegen"] } 
zenoh = "1.3.4"
tokio = { version = "1.45.0", features=["full"] }
serde_json = "1.0.140"
serde = { version = "1.0.140", features = ["derive"] }

[build-dependencies]
roslibrust = { version = "0.14.0", features = ["codegen"] }
cargo-emit = "0.2"
