[package]
name = "router"
version = "0.1.0"
edition = "2024"

[dependencies]
cdr = "0.2.4"
zenoh = "1.3.4"
capnp = "0.21.0"
capnp-rpc = "0.21.0"
tokio = { version = "1.45.0", features=["full"] }
tokio-util = { version = "0.7.15", features = ["compat"] }
futures = "0.3.31"
serde = { version = "^1.0", features = ["derive"] }

[build-dependencies]
capnpc = "0.21.0"
